fix: alignment on project reworked

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,20 +1,9 @@
 .main-section {
    display: flex;
    flex-direction: row;
-   align-items: baseline;
+   align-items: flex-start;
    padding: 50px 20px 50px ;
    font-size: 2em;
- }
-
-
- 
- .main-section .title {
-   color: rgb(0, 159, 227);
-   text-align: end;
-   margin-right: 20px;
-   width: 150px;
-   text-transform: uppercase;
-   font-size: 0.8em;
  }
  
  .content {
@@ -29,7 +18,7 @@
  }
 
  h3 {
-   font-size: 1.2em;
+   font-size: 0.8em;
    margin-bottom: 9px;
  }
 
@@ -42,3 +31,11 @@
    font-size: 0.9em;
    margin-bottom: 9px;
  }
+
+ .main-section .title {
+  color: rgb(0, 159, 227);
+  text-align: end;
+  margin-right: 20px;
+  width: 150px;
+  text-transform: uppercase;
+}
