--- a/src/components/Main/Presentation/Presentation.css
+++ b/src/components/Main/Presentation/Presentation.css
@@ -5,7 +5,6 @@
    justify-content: center;   
    padding: 120px 100px;
    font-size: 2.5rem;
-   border: 1px solid black;
 }
 
 .presentation-title {
